--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,17 @@
 						</configuration>
 					</execution>
 
+					<!-- <execution>
+						<id>npm update</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<arguments>update</arguments>
+						</configuration>
+					</execution> -->
+
 					<execution>
 						<id>npm install</id>
 						<goals>
