--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,17 @@
 						</configuration>
 					</execution> -->
 
+					<!-- <execution>
+						<id>npm audit fix</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<arguments>audit fix</arguments>
+						</configuration>
+					</execution> -->
+
 					<execution>
 						<id>npm install</id>
 						<goals>
